PrimerProyectoJavaCC/src/pkg/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  package pkg;
  public class MiniJavaParser implements MiniJavaParserConstants {
          public static void main(String args[]) {
            MiniJavaParser parser;
              try {
                System.out.println("MiniJava parsing from file...");
                parser = new MiniJavaParser(new java.io.FileInputStream("Prueba.txt"));
              } catch (java.io.FileNotFoundException e) {
                System.out.println("Error: File not found.");
                return;
              }
            try {
              parser.Goal();
              System.out.println("MiniJava program parsed successfully.");
            } catch (ParseException e) {
              System.out.println("Encountered errors during parse.");
              System.out.println(e.getMessage());
            } catch (TokenMgrError e) {
              System.out.println("Encountered errors during Scanning.");
              System.out.println(e.getMessage());
            }
          }

/************************************
 * The MiniJava Grammar Starts Here *
 ************************************/
  final public void Goal() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ImportDeclaration();
    }
    MainClass();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      TypeDeclaration();
    }
    jj_consume_token(0);
  }

  final public void ImportDeclaration() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 49:
      SingleImportDeclaration();
      break;
      MultipleImportDeclaration();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void SingleImportDeclaration() throws ParseException {
    jj_consume_token(49);
    TypeName();
    jj_consume_token(SEMICOLON);
  }

  final public void MultipleImportDeclaration() throws ParseException {
    jj_consume_token(49);
    TypeName();
    jj_consume_token(50);
    jj_consume_token(SEMICOLON);
  }

  final public void TypeName() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(DOT);
    jj_consume_token(IDENTIFIER);
  }

  final public void MainClass() throws ParseException {
    jj_consume_token(CLASS);
    Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
    Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    PrintStatement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
  }

  final public void TypeDeclaration() throws ParseException {
    if (jj_2_1(3)) {
      ClassDeclaration();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ClassExtendsDeclaration();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void ClassDeclaration() throws ParseException {
    jj_consume_token(CLASS);
    Identifier();
    jj_consume_token(LBRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:
      case 52:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      VarDeclaration();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      MethodDeclaration();
    }
    jj_consume_token(RBRACE);
  }

  final public void ClassExtendsDeclaration() throws ParseException {
    jj_consume_token(CLASS);
    Identifier();
    jj_consume_token(EXTENDS);
    Identifier();
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:
      case 52:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      VarDeclaration();
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_6;
      }
      MethodDeclaration();
    }
    jj_consume_token(RBRACE);
  }

  final public void VarDeclaration() throws ParseException {
    Type();
    Identifier();
    jj_consume_token(SEMICOLON);
  }

  final public void MethodDeclaration() throws ParseException {
    jj_consume_token(PUBLIC);
    Type();
    Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER:
    case 52:
      FormalParameterList();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_7:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_7;
      }
      VarDeclaration();
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
      case 54:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_8;
      }
      Statement();
    }
    jj_consume_token(RETURN);
    Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
  }

  final public void FormalParameterList() throws ParseException {
    FormalParameter();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_9;
      }
      FormalParameterRest();
    }
  }

  final public void FormalParameter() throws ParseException {
    Type();
    Identifier();
  }

  final public void FormalParameterRest() throws ParseException {
    jj_consume_token(51);
    FormalParameter();
  }

  final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case 52:
      SimpleType();
      break;
    default:
      jj_la1[11] = jj_gen;
      if (jj_2_3(3)) {
        ArrayType();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          Identifier();
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  final public void SimpleType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 52:
      CharType();
      break;
    case BOOLEAN:
      BooleanType();
      break;
    case INTEGER:
      IntegerType();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ArrayType() throws ParseException {
    SimpleType();
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
  }

  final public void CharType() throws ParseException {
    jj_consume_token(52);
  }

  final public void BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
  }

  final public void IntegerType() throws ParseException {
    jj_consume_token(INTEGER);
  }

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      Block();
      break;
    default:
      jj_la1[14] = jj_gen;
      if (jj_2_4(2)) {
        AssignmentStatement();
      } else if (jj_2_5(2)) {
        ArrayAssignmentStatement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          IfStatement();
          break;
        case WHILE:
          WhileStatement();
          break;
        case 54:
          SwitchStatement();
          break;
        case PRINT:
          PrintStatement();
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  final public void Block() throws ParseException {
    jj_consume_token(LBRACE);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
      case 54:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_10;
      }
      Statement();
    }
    jj_consume_token(RBRACE);
  }

  final public void AssignmentStatement() throws ParseException {
    Identifier();
    jj_consume_token(ASSIGN);
    AssigmentRest();
    jj_consume_token(SEMICOLON);
  }

  final public void ArrayAssignmentStatement() throws ParseException {
    Identifier();
    jj_consume_token(LSQPAREN);
    Expression();
    jj_consume_token(RSQPAREN);
    jj_consume_token(ASSIGN);
    AssigmentRest();
    jj_consume_token(SEMICOLON);
  }

  final public void AssigmentRest() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case NOT:
    case FALSE:
    case NEW:
    case THIS:
    case TRUE:
    case INTEGER_LITERAL:
    case CHAR_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
      Expression();
      break;
      jj_consume_token(LPAREN);
      Type();
      jj_consume_token(RPAREN);
      jj_consume_token(53);
      jj_consume_token(LPAREN);
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void IfStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    Statement();
    jj_consume_token(ELSE);
    Statement();
  }

  final public void IfElseStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    Statement();
    jj_consume_token(ELSE);
    Statement();
  }

  final public void WhileStatement() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    Statement();
  }

//SwitchStatement ::= 	¡¡¡¡COLOCAR AQUI LA REGLA PARA EL switch!!!
  final public void SwitchStatement() throws ParseException {
    jj_consume_token(54);
  }

  final public void PrintStatement() throws ParseException {
    jj_consume_token(PRINT);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
  }

  final public void Expression() throws ParseException {
    if (jj_2_6(2147483647)) {
      AndExpression();
    } else if (jj_2_7(2147483647)) {
      OrExpression();
    } else if (jj_2_8(2147483647)) {
      EqualExpression();
    } else if (jj_2_9(2147483647)) {
      GreatExpression();
    } else if (jj_2_10(2147483647)) {
      LessExpression();
    } else if (jj_2_11(2147483647)) {
      PlusExpression();
    } else if (jj_2_12(2147483647)) {
      MinusExpression();
    } else if (jj_2_13(2147483647)) {
      TimesExpression();
    } else if (jj_2_14(2147483647)) {
      SubExpression();
    } else if (jj_2_15(2147483647)) {
      ArrayLookup();
    } else if (jj_2_16(2147483647)) {
      ArrayLength();
    } else if (jj_2_17(2147483647)) {
      MessageSend();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case NOT:
      case FALSE:
      case NEW:
      case THIS:
      case TRUE:
      case INTEGER_LITERAL:
      case CHAR_LITERAL:
      case STRING_LITERAL:
      case IDENTIFIER:
        PrimaryExpression();
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void AndExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(58);
    PrimaryExpression();
  }

  final public void OrExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(59);
    PrimaryExpression();
  }

  final public void EqualExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(60);
    PrimaryExpression();
  }

  final public void GreatExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(61);
    PrimaryExpression();
  }

  final public void LessExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(LT);
    PrimaryExpression();
  }

  final public void PlusExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(PLUS);
    PrimaryExpression();
  }

  final public void MinusExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(MINUS);
    PrimaryExpression();
  }

  final public void TimesExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(56);
    PrimaryExpression();
  }

  final public void SubExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(57);
    PrimaryExpression();
  }

  final public void ArrayLookup() throws ParseException {
    PrimaryExpression();
    jj_consume_token(LSQPAREN);
    PrimaryExpression();
    jj_consume_token(RSQPAREN);
  }

  final public void ArrayLength() throws ParseException {
    PrimaryExpression();
    jj_consume_token(DOT);
    jj_consume_token(LENGTH);
  }

  final public void MessageSend() throws ParseException {
    PrimaryExpression();
    jj_consume_token(DOT);
    Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case NOT:
    case FALSE:
    case NEW:
    case THIS:
    case TRUE:
    case INTEGER_LITERAL:
    case CHAR_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
      ExpressionList();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
  }

  final public void ExpressionList() throws ParseException {
    Expression();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_11;
      }
      ExpressionRest();
    }
  }

  final public void ExpressionRest() throws ParseException {
    jj_consume_token(51);
    Expression();
  }

  final public void PrimaryExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      IntegerLiteral();
      break;
    case CHAR_LITERAL:
      CharConstant();
      break;
    case STRING_LITERAL:
      StringConstant();
      break;
    case TRUE:
      TrueLiteral();
      break;
    case FALSE:
      FalseLiteral();
      break;
    case IDENTIFIER:
      Identifier();
      break;
    case THIS:
      ThisExpression();
      break;
    default:
      jj_la1[21] = jj_gen;
      if (jj_2_18(3)) {
        ArrayAllocationExpression();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          AllocationExpression();
          break;
        case NOT:
          NotExpression();
          break;
        case LPAREN:
          BracketExpression();
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  final public void IntegerLiteral() throws ParseException {
    jj_consume_token(INTEGER_LITERAL);
  }

  final public void CharConstant() throws ParseException {
    jj_consume_token(CHAR_LITERAL);
  }

  final public void StringConstant() throws ParseException {
    jj_consume_token(STRING_LITERAL);
  }

  final public void TrueLiteral() throws ParseException {
    jj_consume_token(TRUE);
  }

  final public void FalseLiteral() throws ParseException {
    jj_consume_token(FALSE);
  }

  final public void Identifier() throws ParseException {
    jj_consume_token(IDENTIFIER);
  }

  final public void ThisExpression() throws ParseException {
    jj_consume_token(THIS);
  }

  final public void ArrayAllocationExpression() throws ParseException {
    jj_consume_token(NEW);
    SimpleType();
    jj_consume_token(LSQPAREN);
    Expression();
    jj_consume_token(RSQPAREN);
  }

  final public void AllocationExpression() throws ParseException {
    jj_consume_token(NEW);
    Identifier();
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
  }

  final public void NotExpression() throws ParseException {
    jj_consume_token(NOT);
    Expression();
  }

  final public void BracketExpression() throws ParseException {
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_3R_52() {
    if (jj_3R_17()) return true;
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(LENGTH)) return true;
    return false;
  }

  private boolean jj_3R_31() {
    if (jj_3R_44()) return true;
    return false;
  }

  private boolean jj_3R_18() {
    if (jj_scan_token(NEW)) return true;
    if (jj_3R_20()) return true;
    if (jj_scan_token(LSQPAREN)) return true;
    if (jj_3R_28()) return true;
    if (jj_scan_token(RSQPAREN)) return true;
    return false;
  }

  private boolean jj_3R_30() {
    if (jj_3R_43()) return true;
    return false;
  }

  private boolean jj_3R_51() {
    if (jj_3R_17()) return true;
